src/test/ui/catch-block-type-error.stderr
error[E0271]: type mismatch resolving `<std::option::Option<f32> as std::ops::Try>::Ok == {integer}`
  --> $DIR/catch-block-type-error.rs:18:9
   |
LL |         42
   |         ^^ expected f32, found integral variable
   |
   = note: expected type `f32`
              found type `{integer}`

error[E0271]: type mismatch resolving `<std::option::Option<i32> as std::ops::Try>::Ok == ()`
  --> $DIR/catch-block-type-error.rs:22:35
   |
LL |       let _: Option<i32> = do catch {
   |  ___________________________________^
LL | |         //~^ ERROR type mismatch
LL | |         foo()?;
LL | |     };
   | |_____^ expected i32, found ()
   |
   = note: expected type `i32`
              found type `()`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.
